--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -30,33 +30,21 @@ Haskell evaluation contexts, denoted $E_{H}$, determine the Haskell evaluation s
 
 Variables and type variables are unique across all languages.  Alpha conversion implicitly resolves name conflicts.
 
-\input{model/hce.tex}
-
 The Haskell typing relation, denoted $\Gamma\vdash_{H}e_{H}:T$, is defined by a set of typing rules that assign types to expressions \cite{pierce02}.  $\Gamma\vdash_{H}e_{H}:T$ is a typing statement that asserts the type of an expression and typing rules are implications between typing statements.  Where the type of an expression depends on the types of its subexpressions, its typing rule uses typing statements about those subexpressions as premises for its conclusion.  An expression $e_{H}$ is well-typed if there is some $T$ with the context $\Gamma$ such that $\Gamma\vdash_{H}e_{H}:T$.  A context is a set of assumptions about the types of variables and the abstraction of type variables.  Since all programs are assumed to be closed, programs containing free variables or free type variables are ill-typed.  Adding to the context $\Gamma$ assumptions about the type variable $X$ and the type $T$ of variable $x$ is denoted $\Gamma,X$ and $\Gamma,x:T$, respectively.  The typing statement $\Gamma\vdash_{H}T$ asserts the type $T$ is well-formed with the context $\Gamma$.  Where the context is empty, it is omitted from typing statements.
 
-Natural number values, addition and subtraction operations and their operands, and guards of natural number conditions have type $N$.  Functions, left expressions of function applications, and operands of fixed-point operations have type $T_{1}\rightarrow T_{2}$.  Type abstractions and expressions of type applications have type $\forall X.T$.  List constructions, tails of list constructions, empty lists, tail operations, operands of head and tail operations, and guards of list conditions have type $[T]$.
+Natural numbers, addition and subtraction operations and their operands, and guards of natural number conditions have type $N$.  Functions, left expressions of function applications, and operands of fixed-point operations have type $T_{1}\rightarrow T_{2}$.  Type abstractions and expressions of type applications have type $\forall X.T$.  List constructions, tails of list constructions, empty lists, tail operations, operands of head and tail operations, and guards of list conditions have type $[T]$.
 
 Variables have the types they are assumed to have by the context.  If the context does not assume the type of a variable, the variable occurs free and the expression is ill-typed.  If the context does not assume the abstraction of a type variable, the type variable occurs free and the expression is ill-typed.  Function values, empty lists, and error reports have type annotations because their types cannot be calculated otherwise.  Type substitution substitutes one type, $T_{1}$, for free occurrences of a type variable, $X$, within a second type, $T_{2}$, denoted $T_{2}[T_{1}/X]$.  Number subscripts and superscripts of grammar symbols in a typing rule denote distinct instances of them.  Numbers are absent where there is a single instance of a grammar symbol in a typing rule.
-
-\input{model/hctr.tex}
 
 Haskell computations are defined by a set of rewrite rules called an operational semantics.  A rewrite rule rewrites a reducible expression in an evaluation context that matches its left side according to its right side.  Function applications substitute the argument for free occurrences of the function parameter within the function body.  Type applications substitute the argument for free occurrences of the type abstraction parameter within the type abstraction body.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false expressions if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false expressions if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands substituted for the function parameters of their operands within the function bodies of their operands.  Error reports reduce to errors and terminate the computation.
 
 Expression substitution substitutes one expression, $e_{H}^{1}$, for a variable, $x$, within a second expression, $e_{H}^{2}$, denoted $e_{H}^{2}[e_{H}^{1}/x]$.  Variable instances that occur only on the right side of a rewrite rule must be unique.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The interoperation of languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
-
-\input{model/hcos.tex}
 
 \subsection{ML}
 
 ML is identical to Haskell except that it uses strict evaluation instead of lazy evaluation.  This difference affects list constructions and evaluation contexts.  Haskell reduces expressions only where necessary and ML reduces expressions regardless of necessity, thus their definition of values are different.  Haskell list constructions are values regardless of whether their heads and tails are values, but ML list constructions are values where their heads and tails are values.  To reflect these differences, ML adds a list construction expression where the head and tail are expressions, denoted $\mathtt{cons}$ $e_{M}$ $e_{M}$, and changes the head and tail of the list construction value to values, denoted $\mathtt{cons}$ $v_{M}$ $v_{M}$.
 
 ML evaluation contexts extend Haskell evaluation contexts such that all expressions are reduced and the order of evaluation is deterministic.  In addition to the Haskell definition, ML evaluation contexts are right expressions of function applications where left expression are values, heads of list constructions, and tails of list construction where heads are values.
-
-\input{model/mce.tex}
-
-\input{model/mctr.tex}
-
-\input{model/mcos.tex}
 
 \subsection{Scheme}
 
@@ -66,15 +54,23 @@ The dynamic type system adds type predicate expressions that determine the types
 
 In addition to ML evaluation contexts, Scheme evaluation contexts are the expression of type predicates, denoted $p$ $E_{S}$.
 
-\input{model/sce.tex}
-
 It adds a single type called The Scheme Type, $TST$.  Well-typed expressions do not have free variables and have type $TST$.
-
-\input{model/sctr.tex}
 
 It changes the natural number condition to reduce to one if the guard is not zero, and possibly not a natural number.  It changes the list condition to reduce to one if the guard is not an empty list, and possibly not a list.  The type predicates reduce to the natural number zero if true and the natural number one if false.
 
+\clearpage
+
+\input{model/hce.tex}
+\input{model/hctr.tex}
+\input{model/hcos.tex}
+\input{model/mce.tex}
+\input{model/mctr.tex}
+\input{model/mcos.tex}
+\input{model/sce.tex}
+\input{model/sctr.tex}
 \input{model/scos.tex}
+
+\clearpage
 
 \section{Interoperation Calculi}
 
