--- a/model/mce.tex
+++ b/model/mce.tex
@@ -1,15 +1,38 @@
-\begin{figure}[tp]
-%\onehalfspacing
+\begin{figure}[ph!]
 \centering
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ \\
+
+\vspace{5pt}
+
 && $\vert$ $f$ $e_{M}$ $\vert$ $\mathtt{ifnil}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string \\
+
+\vspace{5pt}
+
 $v_{M}$ & $=$ & $\overline{n}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $v_{M}$ $\vert$ $\mathtt{nil}^{T}$ $\vert$ $\lambda x:T.e_{M}$ $\vert$ $\Lambda X.e_{M}$ \\
+
+\vspace{5pt}
+
 $T$ & $=$ & $N$ $\vert$ $X$ $\vert$ $T\rightarrow T$ $\vert$ $\forall X.T$ $\vert$ $[T]$ \\
+
+\vspace{5pt}
+
 $o$ & $=$ & $\mathtt{+}$ $\vert$ $\mathtt{-}$ \\
+
+\vspace{5pt}
+
 $f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
+
+\vspace{5pt}
+
 $E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ \\
+
+\vspace{5pt}
+
 && $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ \\
+
+\vspace{5pt}
+
 && $\vert$ $\mathtt{ifnil}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$
 \end{tabular}
 \caption{ML core expressions}
