--- a/model/mcos.tex
+++ b/model/mcos.tex
@@ -1,32 +1,57 @@
-\begin{figure}[tp]
-%\onehalfspacing
+\begin{figure}[ph!]
 \centering
 \begin{tabular}{l}
 $\mathscr{E}[(\lambda x:T.e_{M})$ $v_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[v_{M}/x]]$ \\
 
+\vspace{5pt}
+
 $\mathscr{E}[(\Lambda X.e_{M})$ $\lbrace T\rbrace]]_{M}\rightarrow\mathscr{E}[e_{M}[T/X]]$ \\
+
+\vspace{5pt}
 
 $\mathscr{E}[+$ $\overline{n_{1}}$ $\overline{n_{2}}]_{M}\rightarrow\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
 
+\vspace{5pt}
+
 $\mathscr{E}[-$ $\overline{n_{1}}$ $\overline{n_{2}}]_{M}\rightarrow\mathscr{E}[\overline{max(n_{1}-n_{2},0)}]$ \\
+
+\vspace{5pt}
 
 $\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow\mathscr{E}[e_{M}^{1}]$ \\
 
+\vspace{5pt}
+
 $\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow\mathscr{E}[e_{M}^{2}]$ $(n\neq0)$ \\
+
+\vspace{5pt}
 
 $\mathscr{E}[\mathtt{hd}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{M}\rightarrow\mathscr{E}[v_{M}^{1}]$ \\
 
+\vspace{5pt}
+
 $\mathscr{E}[\mathtt{tl}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{M}\rightarrow\mathscr{E}[v_{M}^{2}]$ \\
+
+\vspace{5pt}
 
 $\mathscr{E}[\mathtt{hd}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}^{T}$ ``Empty list"$]$ \\
 
+\vspace{5pt}
+
 $\mathscr{E}[\mathtt{tl}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}^{[T]}$ ``Empty list"$]$ \\
+
+\vspace{5pt}
 
 $\mathscr{E}[\mathtt{ifnil}$ $\mathtt{nil}^{T}$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow\mathscr{E}[e_{M}^{1}]$ \\
 
+\vspace{5pt}
+
 $\mathscr{E}[\mathtt{ifnil}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow\mathscr{E}[e_{M}^{2}]$ \\
 
+\vspace{5pt}
+
 $\mathscr{E}[\mathtt{fix}$ $(\lambda x:T.e_{M})]_{M}\rightarrow\mathscr{E}[e_{M}[(\mathtt{fix}$ $(\lambda x:T.e_{M}))/x]]$ \\
+
+\vspace{5pt}
 
 $\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{M}\rightarrow$ \textbf{Error}: string 
 \end{tabular}
