Added spacing to interop figs and got the positioning of all figs the way I want.  Finally.

--- a/model/sitr.tex
+++ b/model/sitr.tex
@@ -1,4 +1,4 @@
-\begin{figure}[p]
+\begin{figure}[ph!]
 \[
 \frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SH^{T}\;e_{H}:TST}
 \quad
