--- a/model/sie.tex
+++ b/model/sie.tex
@@ -1,9 +1,16 @@
-\begin{figure}[p]
-%\onehalfspacing
+\begin{figure}[ph!]
 \centering
 \begin{tabular}{lcl}
+\vspace{5pt}
+
 $e_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $e_{H}$ $\vert$ $SM^{T}$ $e_{M}$ \\
+
+\vspace{5pt}
+
 $v_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $SH^{T^{a}}$ $e_{H}$ $\vert$ $SM^{T^{a}}$ $v_{M}$ \\
+
+\vspace{5pt}
+
 $E_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $E_{H}$ $\vert$ $SM^{T}$ $E_{M}$
 \end{tabular}
 \caption{Scheme interoperation expressions}
