--- a/model/sios.tex
+++ b/model/sios.tex
@@ -1,45 +1,101 @@
-\begin{figure}[p]
-%\onehalfspacing
+\begin{figure}[ph!]
 \centering
 \begin{tabular}{l}
+\vspace{5pt}
+
 % ifnil
 $\mathscr{E}[\mathtt{ifnil}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[\overline{1}]$ \\
+
+\vspace{5pt}
+
 % list?
 $\mathscr{E}[\mathtt{list?}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
+
+\vspace{5pt}
+
 % sh - number
 $\mathscr{E}[SH^{N}$ $\overline{n}]_{S}\rightarrow\mathscr{E}[\overline{n}]$ \\
+
+\vspace{5pt}
+
 % sm - number
 $\mathscr{E}[SM^{N}$ $\overline{n}]_{S}\rightarrow\mathscr{E}[\overline{n}]$ \\
+
+\vspace{5pt}
+
 % sh - function
 $\mathscr{E}[SH^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{H})]_{S}\rightarrow$ \\
 
+\vspace{5pt}
+
 $\quad\mathscr{E}[\lambda x_{2}.(SH^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{H})$ $(^{T_{1}}HS$ $x_{2})))]$ \\
+
+\vspace{5pt}
+
 % sm - function
 $\mathscr{E}[SM^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{M})]_{S}\rightarrow$ \\
 
+\vspace{5pt}
+
 $\quad\mathscr{E}[\lambda x_{2}.(SM^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{M})$ $(^{T_{1}}MS$ $x_{2})))]$ \\
+
+\vspace{5pt}
+
 % sh - universal
 $\mathscr{E}[SH^{\forall X.T}$ $(\Lambda X.e_{H})]_{S}\rightarrow\mathscr{E}[SH^{T[L/X]}$ $((\Lambda X.e_{H})$ $\lbrace L\rbrace)]$ \\
+
+\vspace{5pt}
+
 % sm - universal
 $\mathscr{E}[SM^{\forall X.T}$ $(\Lambda X.e_{H})]_{S}\rightarrow\mathscr{E}[SM^{T[L/X]}$ $((\Lambda X.e_{M})$ $\lbrace L\rbrace)]$ \\
+
+\vspace{5pt}
+
 % sh - universal - hs
 $\mathscr{E}[SH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
+
+\vspace{5pt}
+
 % sm - universal - ms
 $\mathscr{E}[SM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
+
+\vspace{5pt}
+
 % sh - list - head cons
 $\mathscr{E}[\mathtt{hd}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[SH^{T}$ $e_{H}^{1}]$ \\
+
+\vspace{5pt}
+
 % sh - list - tail cons
 $\mathscr{E}[\mathtt{tl}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[SH^{[T]}$ $e_{H}^{2}]$ \\
+
+\vspace{5pt}
+
 % sm - list - cons
 $\mathscr{E}[(SM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{S}\rightarrow\mathscr{E}[\mathtt{cons}$ $(SM^{T}$ $v_{M}^{1})$ $(SM^{[T]}$ $v_{M}^{2})]$ \\
+
+\vspace{5pt}
+
 % sm - list - mh cons
 $\mathscr{E}[SM^{[T]}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]$ \\
+
+\vspace{5pt}
+
 % sh - list - nil
 $\mathscr{E}[SH^{[T]}$ $\mathtt{nil}^{T}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
+
+\vspace{5pt}
+
 % sm - list - nil
 $\mathscr{E}[SM^{[T]}$ $\mathtt{nil}^{T}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
+
+\vspace{5pt}
+
 % sh - lump
 $\mathscr{E}[SH^{L}$ $(^{L}HS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
+
+\vspace{5pt}
+
 % sm - lump
 $\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$
 \end{tabular}
