Rewrote most of ch 2, sec interop, subsec forall.  Not done, though.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -36,7 +36,7 @@ Natural numbers, addition and subtraction operations and their operands, and gua
 
 Variables have the types they are assumed to have by the context.  If the context does not assume the type of a variable, the variable occurs free and the expression is ill-typed.  If the context does not assume the abstraction of a type variable, the type variable occurs free and the expression is ill-typed.  Function values, empty lists, and error reports have type annotations because their types cannot be calculated otherwise.  Type substitution substitutes one type, $T_{1}$, for free occurrences of a type variable, $X$, within a second type, $T_{2}$, denoted $T_{2}[T_{1}/X]$.  Number subscripts and superscripts of grammar symbols in a typing rule denote distinct instances of them.  Numbers are absent where there is a single instance of a grammar symbol in a typing rule.
 
-Haskell computations are defined by a set of rewrite rules called an operational semantics.  A rewrite rule rewrites a reducible expression in an evaluation context that matches its left side according to its right side.  Function applications substitute the argument for free occurrences of the function parameter within the function body.  Type applications substitute the argument for free occurrences of the type abstraction parameter within the type abstraction body.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false expressions if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false expressions if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands substituted for the function parameters of their operands within the function bodies of their operands.  Error reports reduce to errors and terminate the computation.
+Haskell computations are defined by a set of rewrite rules called an operational semantics.  A rewrite rule rewrites a reducible expression in an evaluation context that matches its left side according to its right side.  Function applications substitute the argument for free occurrences of the function parameter within the function body.  Type applications substitute the argument for free occurrences of the type abstraction parameter within the type abstraction body.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false alternatives if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false alternatives if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands substituted for the function parameters of their operands within the function bodies of their operands.  Error reports reduce to errors and terminate the computation.
 
 Expression substitution substitutes one expression, $e_{H}^{1}$, for a variable, $x$, within a second expression, $e_{H}^{2}$, denoted $e_{H}^{2}[e_{H}^{1}/x]$.  Variable instances that occur only on the right side of a rewrite rule must be unique.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The interoperation of languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
 
@@ -86,7 +86,7 @@ Natural numbers do not change when they cross languages because the languages ha
 
 \subsection{Function Types}
 
-Functions cannot be directly converted when they cross languages because the language grammars are different, Haskell and ML do not have a reasonable equivalent for every Scheme function, and functions may behave differently with different evaluation strategies.  Instead, server functions are wrapped inside client functions.  The client functions apply the server function to their arguments and produce the server function results as their own.  This is made possible by languages performing substitution within themselves across boundaries.  Observe the Scheme function $\lambda x_{1}.\mathtt{nil}$ crossing to Haskell with expected type $N\rightarrow[N]$ and being applied to $\overline{0}$:
+Functions cannot be directly converted when they cross languages because the language grammars are different, Haskell and ML do not have a reasonable equivalent for every Scheme function, and functions may behave differently with different evaluation strategies.  Instead, server functions are wrapped in client functions.  The client functions apply the server function to their arguments and produce the server function results as their own.  This is made possible by languages performing substitution within themselves across boundaries.  Observe the Scheme function $\lambda x_{1}.\mathtt{nil}$ cross to Haskell with expected type $N\rightarrow[N]$ and be applied to $\overline{0}$:
 
 \begin{figure}[h]
 $(^{N\rightarrow[N]}HS$ $\lambda x_{1}.\mathtt{nil})$ $\overline{0}$
@@ -114,7 +114,7 @@ $\rightarrow\mathtt{nil}^{N}$
 
 In the above example, a single boundary with a function type is split into two boundaries that convert the Haskell argument to an equivalent Scheme argument and the Scheme result to an equivalent Haskell result.  Every boundary with a function type is split into two boundaries in this fashion.  The Scheme-to-Haskell boundary verifies the syntactic form of its value matches its expected type.  If its value is not some list of natural numbers, it reports a type error.  If the body of the Scheme function had been $\overline{0}$ instead of $\mathtt{nil}$, the computation would reduce to $^{[N]}HS$ $\overline{0}$ instead of $^{[N]}HS$ $\mathtt{nil}$.  Since $\overline{0}$ does not have the equivalent type $[N]$, $^{[N]}HS$ $\overline{0}$ reduces to $\mathtt{wrong}$ ``Not a list" to report the type error.
 
-The case for higher-order functions is more complex, but straightforward.  Observe the Scheme function $\lambda x_{1}.(x_{1}$ $\overline{0})$ crossing to Haskell with expected type $(N\rightarrow N)\rightarrow N$ and being applied to $\lambda x_{2}:N.x_{2}$:
+The case for higher-order functions is more complex, but straightforward.  Observe the Scheme function $\lambda x_{1}.(x_{1}$ $\overline{0})$ cross to Haskell with expected type $(N\rightarrow N)\rightarrow N$ and be applied to $\lambda x_{2}:N.x_{2}$:
 
 \begin{figure}[h]
 $(^{(N\rightarrow N)\rightarrow N}HS$ $\lambda x_{1}.(x_{1}$ $\overline{0}))$ $(\lambda x_{2}:N.x_{2})$
@@ -158,32 +158,27 @@ $\rightarrow\overline{0}$
 
 \subsection{Forall Types}
 
-If the expected and actual types of a boundary expression are a universal type, the contained value is either a type abstraction or a Scheme value contained within another boundary expression.  If it is a type abstraction, $\Lambda X.e_{M}$ with type $\forall X.T$ for example, the boundary expression reduces to a type abstraction of $X$ for a boundary with expected and actual type $T$ containing $e_{M}$.  Therefore $^{\forall X.T}HM^{\forall X.T}$ $(\Lambda X.e_{M})\rightarrow\Lambda X.(^{T}HM^{T}$ $e_{M})$.  If it is a Scheme value contained within another boundary expression, $^{\forall X.T}MS$ $v_{S}$ for example, the boundary expression reduces to a new boundary expression where $v_{S}$ crosses from Scheme to Haskell with expected type $\forall X.T$ and actual type $TST$.  Therefore $^{\forall X.T}HM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})\rightarrow{^{\forall X.T}H}S$ $v_{S}$.
+If the expected and actual types of a boundary are a forall type ($^{\forall X.T}HM^{\forall X.T}$ $v_{M}$ for example), the value is either a type abstraction ($\Lambda X.e_{M}$ for example) or a Scheme value wrapped in an inner boundary ($^{\forall X.T}MS$ $v_{S}$ for example).  If it is a type abstraction, the boundary moves inside the type abstraction and wraps the expression.  For example, $^{\forall X.T}HM^{\forall X.T}$ $\Lambda X.e_{M}$ reduces to $\Lambda X.(^{T}HM^{T}$ $e_{M})$.  If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces to a new boundary bridging the outer language and Scheme that contains the Scheme value.  For example, $^{\forall X.T}HM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})$ reduces to $^{\forall X.T}HS$ $v_{S}$.
 
-If the expected and actual types of a boundary expression are a universal type and the Scheme type, respectively, the contained value is a Scheme value.  Such a boundary expression is irreducible because Scheme does not have expressions with universal types.  Therefore $^{\forall X.T_{1}}HS$ $v_{S}$ and $^{\forall X.T_{1}}MS$ $v_{S}$ are values.  Instead, such a boundary expression can be applied to a type $T_{2}$ like a type abstraction, which could substitute the type argument $T_{2}$ for $X$ within $T_{1}$ for its expected and actual types.  However, if $T_{1}$ is a function type that contains $X$ and $v_{S}$ is a function, a safeguard must ensure that $v_{S}$ does not break the parametricity of Haskell and ML.  For example, if $T_{1}$ is $X\rightarrow X$, Haskell and ML assume $v_{S}$ is the identity function, but it may be another function that satisfies the type and thus breaks parametricity.
+If the expected and actual types of a boundary are a forall type and the Scheme type, respectively, the value is a Scheme value.  Such a boundary is irreducible because Scheme does not have type abstractions.  Therefore $^{\forall X.T_{1}}HS$ $v_{S}$ and $^{\forall X.T_{1}}MS$ $v_{S}$ are values.  Nevertheless, there are useful Scheme values that correspond to forall types, and they ought to be convertable.  If the expected type of the boundary is instantiated and it is not a forall type, the boundary is reducible and the Scheme value can be converted.  However, Haskell and ML preserve parametricity, and instantiating the expected type of the boundary does nothing to prevent the Scheme value, if it is a function, from breaking parametricity once converted.
 
-To ensure Scheme cannot break parametricity, the safeguard must do two things.  First, it must prevent polymorphic Scheme functions from determining their behavior by the types and values of their arguments.  Consider the following reductions, where a polymorphic Scheme function would break the parametricity of Haskell:
+Scheme functions with expected forall types can break parametricity by using type predicates and conditions to determine their behavior by the types and values of their arguments.  Haskell and ML must wrap their arguments for these functions such that Scheme predicates and conditions cannot examine them.  This is done by labeling instantiations of expected forall types with unique labels, denoted $T^{a}$, and making boundaries with labeled actual types---$SH^{T^{a}}$ $e_{H}$ for example---irreducible; Scheme type predicates and conditions cannot examine them.  Therefore $SH^{T^{a}}$ $e_{H}$ and $SM^{T^{a}}$ $v_{M}$ are values.  Expected types of boundaries can be instantiated by applying those boundaries to types.  The reductions of these type applications label the type arguments before instantiating the expected types with them.  See Figure \ref{parametricity-example-1} for an example.
 
-\begin{tabular}{ll}
-& $((^{\forall X.(X\rightarrow X)}HS$ $(\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $1$ $x_{1})))$ $\lbrace N\rbrace)$ $\overline{0}$ \\
-$\rightarrow$ & $(^{N\rightarrow N}HS$ $(\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $1$ $x_{1})))$ $\overline{0}$ \\
-$\rightarrow$ & $(\lambda x_{2}:N.(^{N}HS$ $((\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $1$ $x_{1}))$ $(SH^{N}$ $x_{2}))))$ $\overline{0}$ \\
-$\rightarrow$ & $^{N}HS$ $((\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $1$ $x_{1}))$ $(SH^{N}$ $\overline{0}))$
-\end{tabular}
+\input{figures/parametricity-example-1.tex}
 
-Next, the $SH^{N}\;\overline{0}$ boundary expression would reduce and the Haskell function argument $\overline{0}$ would cross the boundary from Haskell to Scheme and reduce to the Scheme value $\overline{0}$.  The Scheme polymorphic function can now determine the type and value of the argument and thereby break parametricity.  Therefore to preserve parametricity, $SH^{N}\;\overline{0}$ cannot be reducible, and in fact all such boundary expressions in the context of being arguments to polymorphic Scheme functions cannot be reducible as well.  Since such boundary expressions also occur for the conversion of non-polymorphic Scheme functions, such boundary expressions must be marked in such a way that they are reducible for non-polymorphic functions but irreducible for polymorphic functions.  This is done by introducing a new type called a type label, denoted $T^{a}$, and changing the type arguments to labeled types before performing the type substitution.  Even though labeled types are used, the type of the expression is still expected to be the type underlying the label, so the type of HS and MS expressions and the types of expressions within SH and SM expressions are their expected and actual types, respectively, with their labeled types replacd with their corresponding underlying types, denoted $T[T_{i}/T_{i}^{a}]$.  Furthermore, since arguments may be returned, there has to be a way to reduce the nested HS and SH boundaries to retrieve the Haskell value.  Therefore the rewrite rule $\mathscr{E}[^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})\rightarrow\mathscr{E}[e_{H}]$ is added.
+Natural number conditions reduce to their true alternatives only if their guards are $\overline{0}$.  $\mathtt{if0}$ $(SH^{N^{a}}$ $\overline{0})$ $\overline{1}$ $(SH^{N^{a}}$ $\overline{0})$ reduces to $(SH^{N^{a}}$ $\overline{0})$ because the guard is $(SH^{N^{a}}$ $\overline{0})$, which is not equal to $\overline{0}$.  If Scheme functions with labeled expected types produce their arguments as their results, the arguments can cross back to Haskell and ML if the expected and actual types are equal.  Therefore $^{N^{a}}HS$ $(SH^{N^{a}}$ $\overline{0})$ reduces to $\overline{0}$.  If the expected type of the outer boundary and the actual type of the inner boundary are not equal, the outer boundary reduces to a parametricity error report.
 
-Second, it must verify that the same argument corresponds to every instantiation of $X$ within $T_{1}$.  Otherwise, it is possible for a Scheme function with type $\forall X_{1}.(\forall X_{2}.(X_{1}\rightarrow X_{2}\rightarrow X_{1}))$ and instantiated with $N$ and again with $N$ to return the second argument and not the first as required by parametricity.  Therefore every type label used for type substitutions must be unique and the type labels of nested HS and SH and MS and SM expressions must match up.  Otherwise, an error is signaled to indicate that parametricity was broken.
+Observe that $(^{\forall X.(X\rightarrow X)}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$ $\lbrace N\rbrace)$, which has type $\forall X.(X\rightarrow X)$, reduces to $^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$, which has type $N^{a}\rightarrow N^{a}$.  $N^{a}\rightarrow N^{a}$ conflicts with $N\rightarrow N$, the type expected by other Haskell expressions.  The Haskell and ML typing relations resolve this conflict by removing all labels from expected and actual types.  For example, $\Gamma\vdash_{H}{^{T}H}S$ $e_{S}:T[T_{i}/T^{a}_{i}]$, where $T[T_{i}/T_{i}^{a}]$ denotes the substitution of every labeled type $T_{i}^{a}$ for the underlying type $T_{i}$ within $T$.
 
-Even if $T_{1}$ is not a function type, the type labels are still used in case a function type is contained by it.
+Scheme functions with expected forall types can also break parametricity by producing the wrong argument as their results.  Haskell and ML assume type variables for result types are instantiated along with one or more type variables for argument types.  For example, Haskell and ML assume a function with type $\forall X_{1}.(\forall X_{2}.(X_{1}\rightarrow(X_{2}\rightarrow X_{2}))$ reduces to its second argument because the second argument and the result share the same type variable.  Labels enforce this assumption because unique labels are used for each application of a boundary to a type.  Unique labels group argument and result types together, and mismatched labels for expected and actual types of boundaries indicates that Scheme broke parametricity.  See Figure \ref{parametricity-example-2} for an example.
+
+\input{figures/parametricity-example-2.tex}
 
 If the expected and actual types of a boundary expression are the Scheme type and a universal type, respectively, the contained value is either a type abstraction or a Scheme value contained within another boundary expression.
 
 If it is a type abstraction, $\Lambda X.e_{H}$ with type $\forall X.T$ for example, it may contain parametrically polymorphic functions of types containing $X$.  Since those functions are parametrically polymorphic, they cannot examine the types or values of their arguments.  Therefore Scheme arguments for these functions cannot cross the boundary to Haskell and ML.  In addition, the function types must be instantiated with a type that would enable them to accept any Scheme argument.  The lump type $L$ is added to be used in these situations.  $^{L}HS$ $v_{S}$ and $^{L}MS$ $v_{S}$ are irreducible.  For example, $SH^{\forall X.(T\rightarrow T)}$ $\Lambda X.(\lambda x:X.x)\rightarrow SH^{(T\rightarrow T)[L/X]}$ $(\Lambda X.(\lambda x:X.x))$ $\lbrace L\rbrace\rightarrow SH^{L\rightarrow L}$ $(\lambda x:L.x)$.
 
 If it is a Scheme value contained within another boundary expression, the boundary expression reduces to the Scheme value.  For example, $SH^{T}$ $(^{T}HS$ $v_{S})\rightarrow$ $v_{S}$.
-
-!!! TODO: explain label removal t[ti/tia] syntax
 
 \subsection{List Types}
 
